#1262: Converted GetUnitOfMeasureTypes UC to extend BaseAbstractEditCommand